--- a/style.css
+++ b/style.css
@@ -1,10 +1,30 @@
 body {
     text-align: center;
-    background-color: rgb(5, 247, 247);
+    background: linear-gradient( rgb(5, 247, 247),#2a27f9);
+    margin: 0 auto;
 }
 .capa{
     width:100%
 }
 .beneficios{
     text-align: left;
+}
+.beneficios h2{
+    text-align: center;
+}
+ul{
+    display: inline-block;
+    vertical-align: top;
+}
+li{
+    padding: 20px;
+    font-size: 20px;
+    margin-left: 100px;
+    margin-right: 100px;
+}
+.imagem-beneficios{
+    width: 30%;
+    border-radius: 20px;
+    box-shadow: 2px 2px 20px #000000;
+    margin-left: 100px;
 }
